fix: spacing between sectons

--- a/src/checkout.css
+++ b/src/checkout.css
@@ -200,6 +200,7 @@ input[type="number"] {
     margin-left: 0;
     margin-bottom: 4px;
     font-size: 20px;
+    margin-top: 24px;
   }
 
   .donation-total {
